--- a/report.ipynb
+++ b/report.ipynb
@@ -34,7 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "policy_results_d = \"logs/cifar100-ResNet20-4/augmentations\"\n",
+    "%%capture\n",
+    "policy_results_d = Path(\"logs/cifar100-ResNet20-4/augmentations\")\n",
     "\n",
     "# Load validation dataset for image visualization\n",
     "validset = torchvision.datasets.CIFAR100(root=\"data/\", train=False, download=True, transform=transforms.ToTensor())"
@@ -47,9 +48,9 @@
    "outputs": [],
    "source": [
     "spri = []\n",
-    "all_policies = [list(map(int, p.stem.split(\"-\"))) for p in Path(policy_results_d).glob(\"*[0-9].json\")]\n",
+    "all_policies = [list(map(int, p.stem.split(\"-\"))) for p in policy_results_d.glob(\"*[0-9].json\")]\n",
     "for policy in all_policies:\n",
-    "    policy_results_f = f\"{policy_results_d}/{'-'.join(map(str, policy))}.json\"\n",
+    "    policy_results_f = policy_results_d / f\"{'-'.join(map(str, policy))}.json\"\n",
     "    with open(policy_results_f) as f:\n",
     "        policy_results = json.load(f)\n",
     "    spri.append(policy_results[\"S_pri\"])\n",
@@ -73,13 +74,13 @@
     "grad_sim_t = []\n",
     "grad_sim_not = []\n",
     "\n",
-    "no_policy_results_f = f\"{policy_results_d}/.json\"\n",
+    "no_policy_results_f = policy_results_d / \".json\"\n",
     "with open(no_policy_results_f) as f:\n",
     "    no_policy_results = json.load(f)\n",
     "grad_sim_not = [no_policy_results[\"grad_sim\"][idx] for idx in image_ids]\n",
     "\n",
     "for policy in policies:\n",
-    "    policy_results_f = f\"{policy_results_d}/{'-'.join(map(str, policy))}.json\"\n",
+    "    policy_results_f = policy_results_d / f\"{'-'.join(map(str, policy))}.json\"\n",
     "    with open(policy_results_f) as f:\n",
     "        policy_results = json.load(f)\n",
     "    grad_sim_t.extend([policy_results[\"grad_sim\"][idx] for idx in image_ids])\n",
@@ -137,6 +138,37 @@
    "metadata": {},
    "source": [
     "# Figure 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "single_policies_idx = [i for i, p in enumerate(all_policies) if len(p) == 1]\n",
+    "transformation_spri = [[] for _ in range(len(single_policies_idx))]\n",
+    "for i in single_policies_idx:\n",
+    "    policy = all_policies[i]\n",
+    "    policy_spri = spri[i]\n",
+    "    for t in policy:\n",
+    "        transformation_spri[t].append(policy_spri)\n",
+    "transformation_spri = [np.mean(t) for t in transformation_spri]\n",
+    "\n",
+    "def plot_figur5(transformation_spri):\n",
+    "    num_trans = len(transformation_spri)\n",
+    "    transformation_spri = np.array(transformation_spri)\n",
+    "    best_5 = transformation_spri.argsort()[:5]\n",
+    "    colors = [(\"r\" if i in best_5 else \"gray\") for i in range(num_trans)]\n",
+    "    plt.bar(range(num_trans), transformation_spri, color=colors)\n",
+    "    plt.xlabel('Transformation index')\n",
+    "    plt.ylabel('S_pri')\n",
+    "    plt.ylim(0.25, 0.45)\n",
+    "    plt.yticks(np.linspace(0.25, 0.45, 5))\n",
+    "    plt.show()\n",
+    "    print(\"5 best transformations:\", best_5)\n",
+    "\n",
+    "plot_figur5(transformation_spri)"
    ]
   },
   {
